# Atomic-Chat

./: .gitignore  Makefile  package.json
.github/agents/: saas-architect.agent.md
.github/workflows/: release.yml
design/: DESIGN-HANDOFF.md  DESIGN-MANIFEST.json  atomic-chat-launcher.html  desktop.html  index.html  landing.html  mobile-ios.html  model-hub.html  onboarding-ios.html  onboarding.html  provider-settings.html  widgets.html
design/css/: atomic.css
design/js/: theme.js
docs/: FEATURE_ROADMAP.md  LIQUID_GLASS_PRIORITY.md  OPEN_DESIGN_PROMPT.md  STIKI_AUTH_INTEGRATION.md  STIKI_AUTH_PLAN.md
scripts/: finish-macos-codesign.sh  notarize-dmg-macos.sh
src-tauri/: Cargo.toml  tauri.macos.conf.json
src-tauri/plugins/tauri-plugin-mlx-ios/: Cargo.toml  README.md  build.rs  package.json  rollup.config.js  tsconfig.json
src-tauri/plugins/tauri-plugin-mlx-ios/Swift/: MLXBridge.swift
src-tauri/plugins/tauri-plugin-mlx-ios/guest-js/: index.ts
src-tauri/plugins/tauri-plugin-mlx-ios/permissions/: default.json
src-tauri/plugins/tauri-plugin-mlx-ios/src/: commands.rs  error.rs  lib.rs  models.rs  swift-bridge.rs
src-tauri/scripts/: strip-macos-xattrs.sh
src-tauri/src/: lib.rs
src-tauri/src/core/: setup.rs
supabase/: schema.sql
web-app/: package.json  supabase-test.ts  vite.config.ts
web-app/src/: index.css  routeTree.gen.ts
web-app/src/constants/: models.ts  providers.ts
web-app/src/containers/: Card.tsx
web-app/src/hooks/: useRealtimeMessages.ts  useRealtimeThreads.ts
web-app/src/lib/: crypto.ts  (+1 more)
web-app/supabase/: schema.sql
(+27 files in other folders)
