[package]
name = "tauri-plugin-mlx-ios"
version = "0.6.599"
authors = ["Jan <service@jan.ai>"]
description = "Tauri plugin for on-device MLX inference on iOS via MLX Swift"
license = "MIT"
repository = "https://github.com/AtomicBot-ai/Atomic-Chat"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-mlx-ios"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.5.0", default-features = false, features = [] }
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tauri-plugin = { version = "2.3.1", features = ["build"] }
